// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Bream.Review summary header Bad Performance 1`] = `
<div
  className="BootstrapContainer-g5c9uo-0 kJhAQL"
>
  <div
    className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 ckAxSA"
    width="calc(100% + 40px)"
  >
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 fJbIOO"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 hgLvaX"
        height="100%"
        width="100%"
      >
        <p
          className="BootstrapTypography-y5qxg5-0 eKnrAT"
          fontWeight={600}
        >
          Your Performance
        </p>
        <div
          className="BootstrapBox-sc-1geqqjv-0 CYHJI"
          height="100%"
        >
          <div
            className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapProgress-sc-18m3d45-0 SuiteLogsReviewPerformance__OuterProgress-sc-1t02szf-0 iYJqzg"
            height="100%"
            value={10}
            width="8.4rem"
          >
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={10}
              className="BootstrapBox-sc-1geqqjv-0 SuiteLogsReviewPerformance__InnerProgress-sc-1t02szf-1 hYVeWg"
              role="progressbar"
              value={10}
              width="10%"
            >
               
            </div>
            <div
              className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 bjdxxf"
              height="100%"
              width="100%"
            >
              <p
                className="BootstrapTypography-y5qxg5-0 hCiJdL"
                fontWeight="bold"
              >
                10
                %
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 fJbIOO"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 ixgBvs"
        height="100%"
        width="100%"
      >
        <p
          className="BootstrapTypography-y5qxg5-0 eKnrAT"
          fontWeight={600}
        >
          Your Time
        </p>
        <p
          className="BootstrapTypography-y5qxg5-0 hCiJdL"
          fontWeight="bold"
        >
          <span>
            00
            :
            10
            :
            00
          </span>
        </p>
      </div>
    </div>
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 gpqkHf"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 lkppNG BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 ixgBvs"
        height="100%"
        width="100%"
      >
        <div
          className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 hRlmZT"
          height="100%"
          width="calc(100% + 40px)"
        >
          <div
            className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 cGnGCi"
            width="auto"
          >
            <p
              className="BootstrapTypography-y5qxg5-0 eKnrAT"
              fontWeight={600}
            >
              <div
                className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 fxqsJl"
                height="100%"
                width="calc(100% + 40px)"
              >
                <div
                  className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 bfHFvR"
                  width="auto"
                >
                  <span
                    className="ThemeSvgIcon-sc-130yxru-0 coNeng BootstrapBox-sc-1geqqjv-0 cFZIDb"
                    src="data:image/svg+xml;base64,PHN2ZyBpZD0iR3JvdXBfMjA3IiBkYXRhLW5hbWU9Ikdyb3VwIDIwNyIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2aWV3Qm94PSIwIDAgMjUgMjUiPgogIDxkZWZzPgogICAgPHN0eWxlPgogICAgICAuY2xzLTEgewogICAgICAgIGZpbGw6ICM3MWEyZmY7CiAgICAgIH0KICAgIDwvc3R5bGU+CiAgPC9kZWZzPgogIDxnIGlkPSJHcm91cF8xNDkiIGRhdGEtbmFtZT0iR3JvdXAgMTQ5Ij4KICAgIDxwYXRoIGlkPSJQYXRoXzk5IiBkYXRhLW5hbWU9IlBhdGggOTkiIGNsYXNzPSJjbHMtMSIgZD0iTTE0LjU5LDNBNy40MTMsNy40MTMsMCwwLDEsMjIsMTAuNDFWMTQuNmE3LjQyLDcuNDIsMCwwLDEtNy40MSw3LjQxSDNWMTAuNDFBNy40MTMsNy40MTMsMCwwLDEsMTAuNDEsM2g0LjE4bTAtM0gxMC40QTEwLjQwNywxMC40MDcsMCwwLDAsMCwxMC40MVYyNUgxNC41OUExMC40MDksMTAuNDA5LDAsMCwwLDI1LDE0LjU5VjEwLjRBMTAuNDA3LDEwLjQwNywwLDAsMCwxNC41OSwwWiIvPgogIDwvZz4KICA8ZyBpZD0iR3JvdXBfMTUwIiBkYXRhLW5hbWU9Ikdyb3VwIDE1MCI+CiAgICA8cGF0aCBpZD0iUGF0aF8xMDAiIGRhdGEtbmFtZT0iUGF0aCAxMDAiIGNsYXNzPSJjbHMtMSIgZD0iTTExLjY2LDE0LjQxbC0uODEtNC4wMVY2Ljc2SDE0VjEwLjRsLS44Myw0LjAxSDExLjY2Wm0tLjczLDEuNDFoMi45OHYyLjQzSDEwLjkzWiIvPgogIDwvZz4KPC9zdmc+Cg=="
                  />
                </div>
                <div
                  className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 biRFur"
                  width="auto"
                >
                  <span
                    className="BootstrapTypography-y5qxg5-0 eKnrAT BootstrapBox-sc-1geqqjv-0 cynOcG"
                    fontWeight={600}
                  >
                    Keep training; practice makes perfect!
                  </span>
                </div>
              </div>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Bream.Review summary header Good Performance 1`] = `
<div
  className="BootstrapContainer-g5c9uo-0 kJhAQL"
>
  <div
    className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 ckAxSA"
    width="calc(100% + 40px)"
  >
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 fJbIOO"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 hgLvaX"
        height="100%"
        width="100%"
      >
        <p
          className="BootstrapTypography-y5qxg5-0 eKnrAT"
          fontWeight={600}
        >
          Your Performance
        </p>
        <div
          className="BootstrapBox-sc-1geqqjv-0 CYHJI"
          height="100%"
        >
          <div
            className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapProgress-sc-18m3d45-0 SuiteLogsReviewPerformance__OuterProgress-sc-1t02szf-0 kPhtGI"
            height="100%"
            value={50}
            width="8.4rem"
          >
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={50}
              className="BootstrapBox-sc-1geqqjv-0 SuiteLogsReviewPerformance__InnerProgress-sc-1t02szf-1 gSPNRz"
              role="progressbar"
              value={50}
              width="50%"
            >
               
            </div>
            <div
              className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 bjdxxf"
              height="100%"
              width="100%"
            >
              <p
                className="BootstrapTypography-y5qxg5-0 hCiJdL"
                fontWeight="bold"
              >
                50
                %
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 fJbIOO"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 ixgBvs"
        height="100%"
        width="100%"
      >
        <p
          className="BootstrapTypography-y5qxg5-0 eKnrAT"
          fontWeight={600}
        >
          Your Time
        </p>
        <p
          className="BootstrapTypography-y5qxg5-0 hCiJdL"
          fontWeight="bold"
        >
          <span>
            00
            :
            10
            :
            00
          </span>
        </p>
      </div>
    </div>
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 gpqkHf"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 lkppNG BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 ixgBvs"
        height="100%"
        width="100%"
      >
        <div
          className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 hRlmZT"
          height="100%"
          width="calc(100% + 40px)"
        >
          <div
            className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 cGnGCi"
            width="auto"
          >
            <p
              className="BootstrapTypography-y5qxg5-0 eKnrAT"
              fontWeight={600}
            >
              <div
                className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 fxqsJl"
                height="100%"
                width="calc(100% + 40px)"
              >
                <div
                  className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 bfHFvR"
                  width="auto"
                >
                  <span
                    className="ThemeSvgIcon-sc-130yxru-0 coNeng BootstrapBox-sc-1geqqjv-0 cFZIDb"
                    src="data:image/svg+xml;base64,PHN2ZyBpZD0iR3JvdXBfMjA3IiBkYXRhLW5hbWU9Ikdyb3VwIDIwNyIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2aWV3Qm94PSIwIDAgMjUgMjUiPgogIDxkZWZzPgogICAgPHN0eWxlPgogICAgICAuY2xzLTEgewogICAgICAgIGZpbGw6ICM3MWEyZmY7CiAgICAgIH0KICAgIDwvc3R5bGU+CiAgPC9kZWZzPgogIDxnIGlkPSJHcm91cF8xNDkiIGRhdGEtbmFtZT0iR3JvdXAgMTQ5Ij4KICAgIDxwYXRoIGlkPSJQYXRoXzk5IiBkYXRhLW5hbWU9IlBhdGggOTkiIGNsYXNzPSJjbHMtMSIgZD0iTTE0LjU5LDNBNy40MTMsNy40MTMsMCwwLDEsMjIsMTAuNDFWMTQuNmE3LjQyLDcuNDIsMCwwLDEtNy40MSw3LjQxSDNWMTAuNDFBNy40MTMsNy40MTMsMCwwLDEsMTAuNDEsM2g0LjE4bTAtM0gxMC40QTEwLjQwNywxMC40MDcsMCwwLDAsMCwxMC40MVYyNUgxNC41OUExMC40MDksMTAuNDA5LDAsMCwwLDI1LDE0LjU5VjEwLjRBMTAuNDA3LDEwLjQwNywwLDAsMCwxNC41OSwwWiIvPgogIDwvZz4KICA8ZyBpZD0iR3JvdXBfMTUwIiBkYXRhLW5hbWU9Ikdyb3VwIDE1MCI+CiAgICA8cGF0aCBpZD0iUGF0aF8xMDAiIGRhdGEtbmFtZT0iUGF0aCAxMDAiIGNsYXNzPSJjbHMtMSIgZD0iTTExLjY2LDE0LjQxbC0uODEtNC4wMVY2Ljc2SDE0VjEwLjRsLS44Myw0LjAxSDExLjY2Wm0tLjczLDEuNDFoMi45OHYyLjQzSDEwLjkzWiIvPgogIDwvZz4KPC9zdmc+Cg=="
                  />
                </div>
                <div
                  className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 biRFur"
                  width="auto"
                >
                  <span
                    className="BootstrapTypography-y5qxg5-0 eKnrAT BootstrapBox-sc-1geqqjv-0 cynOcG"
                    fontWeight={600}
                  >
                    Good progress; keep calm and carry on!
                  </span>
                </div>
              </div>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Bream.Review summary header Great Performance 1`] = `
<div
  className="BootstrapContainer-g5c9uo-0 kJhAQL"
>
  <div
    className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 ckAxSA"
    width="calc(100% + 40px)"
  >
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 fJbIOO"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 hgLvaX"
        height="100%"
        width="100%"
      >
        <p
          className="BootstrapTypography-y5qxg5-0 eKnrAT"
          fontWeight={600}
        >
          Your Performance
        </p>
        <div
          className="BootstrapBox-sc-1geqqjv-0 CYHJI"
          height="100%"
        >
          <div
            className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapProgress-sc-18m3d45-0 SuiteLogsReviewPerformance__OuterProgress-sc-1t02szf-0 hjRkgZ"
            height="100%"
            value={100}
            width="8.4rem"
          >
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={100}
              className="BootstrapBox-sc-1geqqjv-0 SuiteLogsReviewPerformance__InnerProgress-sc-1t02szf-1 dQpKzC"
              role="progressbar"
              value={100}
              width="100%"
            >
               
            </div>
            <div
              className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 bjdxxf"
              height="100%"
              width="100%"
            >
              <p
                className="BootstrapTypography-y5qxg5-0 hCiJdL"
                fontWeight="bold"
              >
                100
                %
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 fJbIOO"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 ixgBvs"
        height="100%"
        width="100%"
      >
        <p
          className="BootstrapTypography-y5qxg5-0 eKnrAT"
          fontWeight={600}
        >
          Your Time
        </p>
        <p
          className="BootstrapTypography-y5qxg5-0 hCiJdL"
          fontWeight="bold"
        >
          <span>
            00
            :
            10
            :
            00
          </span>
        </p>
      </div>
    </div>
    <div
      className="BootstrapBox-sc-1geqqjv-0 JqNwa BootstrapColumn-tsh77x-0 gpqkHf"
      width="auto"
    >
      <div
        className="BootstrapBox-sc-1geqqjv-0 lkppNG BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 eCEFdA ThemePaper-sc-1az3r72-0 ixgBvs"
        height="100%"
        width="100%"
      >
        <div
          className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 hRlmZT"
          height="100%"
          width="calc(100% + 40px)"
        >
          <div
            className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 cGnGCi"
            width="auto"
          >
            <p
              className="BootstrapTypography-y5qxg5-0 eKnrAT"
              fontWeight={600}
            >
              <div
                className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 BootstrapRow-sc-68nhcn-0 fxqsJl"
                height="100%"
                width="calc(100% + 40px)"
              >
                <div
                  className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 bfHFvR"
                  width="auto"
                >
                  <span
                    className="ThemeSvgIcon-sc-130yxru-0 coNeng BootstrapBox-sc-1geqqjv-0 cFZIDb"
                    src="data:image/svg+xml;base64,PHN2ZyBpZD0iR3JvdXBfMjA3IiBkYXRhLW5hbWU9Ikdyb3VwIDIwNyIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2aWV3Qm94PSIwIDAgMjUgMjUiPgogIDxkZWZzPgogICAgPHN0eWxlPgogICAgICAuY2xzLTEgewogICAgICAgIGZpbGw6ICM3MWEyZmY7CiAgICAgIH0KICAgIDwvc3R5bGU+CiAgPC9kZWZzPgogIDxnIGlkPSJHcm91cF8xNDkiIGRhdGEtbmFtZT0iR3JvdXAgMTQ5Ij4KICAgIDxwYXRoIGlkPSJQYXRoXzk5IiBkYXRhLW5hbWU9IlBhdGggOTkiIGNsYXNzPSJjbHMtMSIgZD0iTTE0LjU5LDNBNy40MTMsNy40MTMsMCwwLDEsMjIsMTAuNDFWMTQuNmE3LjQyLDcuNDIsMCwwLDEtNy40MSw3LjQxSDNWMTAuNDFBNy40MTMsNy40MTMsMCwwLDEsMTAuNDEsM2g0LjE4bTAtM0gxMC40QTEwLjQwNywxMC40MDcsMCwwLDAsMCwxMC40MVYyNUgxNC41OUExMC40MDksMTAuNDA5LDAsMCwwLDI1LDE0LjU5VjEwLjRBMTAuNDA3LDEwLjQwNywwLDAsMCwxNC41OSwwWiIvPgogIDwvZz4KICA8ZyBpZD0iR3JvdXBfMTUwIiBkYXRhLW5hbWU9Ikdyb3VwIDE1MCI+CiAgICA8cGF0aCBpZD0iUGF0aF8xMDAiIGRhdGEtbmFtZT0iUGF0aCAxMDAiIGNsYXNzPSJjbHMtMSIgZD0iTTExLjY2LDE0LjQxbC0uODEtNC4wMVY2Ljc2SDE0VjEwLjRsLS44Myw0LjAxSDExLjY2Wm0tLjczLDEuNDFoMi45OHYyLjQzSDEwLjkzWiIvPgogIDwvZz4KPC9zdmc+Cg=="
                  />
                </div>
                <div
                  className="BootstrapBox-sc-1geqqjv-0 BootstrapFlex-jzbfrr-0 fywpNm BootstrapColumn-tsh77x-0 biRFur"
                  width="auto"
                >
                  <span
                    className="BootstrapTypography-y5qxg5-0 eKnrAT BootstrapBox-sc-1geqqjv-0 cynOcG"
                    fontWeight={600}
                  >
                    Great job; tell your friends about your success!
                  </span>
                </div>
              </div>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content Data 1`] = `null`;

exports[`Storyshots Content Editor Of Data 1`] = `null`;

exports[`Storyshots Content Editor Of Flex 1`] = `null`;

exports[`Storyshots Content Editor Of Nested Flex 1`] = `null`;

exports[`Storyshots Content Editor Of Table 1`] = `null`;

exports[`Storyshots Content Editor Of Text 1`] = `null`;

exports[`Storyshots Content Flex 1`] = `
<div
  className="Item-sc-10s0ojn-0 Flex-jm331f-0 kcTaZv"
  direction="row"
  id="grid"
  spacing={32}
  type="grid"
  wrap="nowrap"
>
  <div
    className="Item-sc-10s0ojn-0 Table__Container-u530n6-0 lNMTM"
    id="table"
    type="table"
  >
    <table
      className="Table__StyledTable-u530n6-1 FuEmH"
      scale={1}
    >
      <thead>
        <tr>
          <th
            className="TableCell-oc851c-0 lnUsfb"
          >
            first column
          </th>
          <th
            className="TableCell-oc851c-0 lnUsfb"
          >
            second column
          </th>
          <th
            className="TableCell-oc851c-0 lnUsfb"
          >
            third column
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 1, column 1
          </td>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 1, column 2
          </td>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 1, column 3
          </td>
        </tr>
        <tr>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 2, column 1
          </td>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 2, column 2
          </td>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 2, column 3
          </td>
        </tr>
        <tr>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 3, column 1
          </td>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 3, column 2
          </td>
          <td
            className="TableCell-oc851c-0 lnUsfb"
          >
            row 3, column 3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="Item-sc-10s0ojn-0 Xwmnj RichText-yekvnw-0 hIhKZq DraftEditor/root DraftEditor/alignLeft RichText-yekvnw-0 hIhKZq DraftEditor/root DraftEditor/alignLeft"
    id="text"
    type="draft"
  >
    <div
      className="DraftEditor-root"
    >
      <div
        className="DraftEditor-editorContainer"
      >
        <div
          aria-activedescendant={null}
          aria-autocomplete={null}
          aria-controls={null}
          aria-describedby="placeholder-text"
          aria-expanded={null}
          aria-owns={null}
          className="public-DraftEditor-content"
          contentEditable={false}
          onBeforeInput={[Function]}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCopy={[Function]}
          onCut={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onSelect={[Function]}
          role={null}
          spellCheck={false}
          style={
            Object {
              "WebkitUserSelect": "text",
              "outline": "none",
              "userSelect": "text",
              "whiteSpace": "pre-wrap",
              "wordWrap": "break-word",
            }
          }
          suppressContentEditableWarning={true}
        >
          <div
            data-contents="true"
          >
            <h1
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h1-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h1-0-0"
              >
                <span
                  data-offset-key="h1-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header one
                  </span>
                </span>
              </div>
            </h1>
            <h2
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h2-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h2-0-0"
              >
                <span
                  data-offset-key="h2-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header two
                  </span>
                </span>
              </div>
            </h2>
            <h3
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h3-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h3-0-0"
              >
                <span
                  data-offset-key="h3-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header three
                  </span>
                </span>
              </div>
            </h3>
            <h4
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h4-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h4-0-0"
              >
                <span
                  data-offset-key="h4-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header four
                  </span>
                </span>
              </div>
            </h4>
            <h5
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h5-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h5-0-0"
              >
                <span
                  data-offset-key="h5-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header five
                  </span>
                </span>
              </div>
            </h5>
            <h6
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h6-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h6-0-0"
              >
                <span
                  data-offset-key="h6-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header six
                  </span>
                </span>
              </div>
            </h6>
            <div
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="unstyled-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="unstyled-0-0"
              >
                <span
                  data-offset-key="unstyled-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    This block is draft.js content.
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content Initial Editor 1`] = `null`;

exports[`Storyshots Content Nested Flex 1`] = `
<div
  className="Item-sc-10s0ojn-0 Flex-jm331f-0 kcTaZv"
  direction="row"
  id="grid"
  spacing={32}
  type="grid"
  wrap="nowrap"
>
  <div
    className="Item-sc-10s0ojn-0 Flex-jm331f-0 fQLCBd"
    direction="column"
    id="b3e6d581-6df8-47ee-b2cf-6cb9119edd78"
    spacing={32}
    type="grid"
    wrap="nowrap"
  >
    <div
      className="Item-sc-10s0ojn-0 Xwmnj RichText-yekvnw-0 hIhKZq DraftEditor/root DraftEditor/alignLeft RichText-yekvnw-0 hIhKZq DraftEditor/root DraftEditor/alignLeft"
      id="27053ca8-1f37-4cf6-bb97-a51847b34dc8"
      type="draft"
    >
      <div
        className="DraftEditor-root"
      >
        <div
          className="DraftEditor-editorContainer"
        >
          <div
            aria-activedescendant={null}
            aria-autocomplete={null}
            aria-controls={null}
            aria-describedby="placeholder-27053ca8-1f37-4cf6-bb97-a51847b34dc8"
            aria-expanded={null}
            aria-owns={null}
            className="public-DraftEditor-content"
            contentEditable={false}
            onBeforeInput={[Function]}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onCopy={[Function]}
            onCut={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onSelect={[Function]}
            role={null}
            spellCheck={false}
            style={
              Object {
                "WebkitUserSelect": "text",
                "outline": "none",
                "userSelect": "text",
                "whiteSpace": "pre-wrap",
                "wordWrap": "break-word",
              }
            }
            suppressContentEditableWarning={true}
          >
            <div
              data-contents="true"
            >
              <div
                className="RichText-yekvnw-0 hIhKZq"
                data-block={true}
                data-editor="27053ca8-1f37-4cf6-bb97-a51847b34dc8"
                data-offset-key="bppru-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="bppru-0-0"
                >
                  <span
                    data-offset-key="bppru-0-0"
                    style={Object {}}
                  >
                    <span
                      data-text="true"
                    >
                      Rich text
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Item-sc-10s0ojn-0 Table__Container-u530n6-0 lNMTM"
      id="table"
      type="table"
    >
      <table
        className="Table__StyledTable-u530n6-1 FuEmH"
        scale={1}
      >
        <thead>
          <tr>
            <th
              className="TableCell-oc851c-0 lnUsfb"
            >
              first column
            </th>
            <th
              className="TableCell-oc851c-0 lnUsfb"
            >
              second column
            </th>
            <th
              className="TableCell-oc851c-0 lnUsfb"
            >
              third column
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 1, column 1
            </td>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 1, column 2
            </td>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 1, column 3
            </td>
          </tr>
          <tr>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 2, column 1
            </td>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 2, column 2
            </td>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 2, column 3
            </td>
          </tr>
          <tr>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 3, column 1
            </td>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 3, column 2
            </td>
            <td
              className="TableCell-oc851c-0 lnUsfb"
            >
              row 3, column 3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="Item-sc-10s0ojn-0 Xwmnj RichText-yekvnw-0 hIhKZq DraftEditor/root DraftEditor/alignLeft RichText-yekvnw-0 hIhKZq DraftEditor/root DraftEditor/alignLeft"
    id="text"
    type="draft"
  >
    <div
      className="DraftEditor-root"
    >
      <div
        className="DraftEditor-editorContainer"
      >
        <div
          aria-activedescendant={null}
          aria-autocomplete={null}
          aria-controls={null}
          aria-describedby="placeholder-text"
          aria-expanded={null}
          aria-owns={null}
          className="public-DraftEditor-content"
          contentEditable={false}
          onBeforeInput={[Function]}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCopy={[Function]}
          onCut={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onSelect={[Function]}
          role={null}
          spellCheck={false}
          style={
            Object {
              "WebkitUserSelect": "text",
              "outline": "none",
              "userSelect": "text",
              "whiteSpace": "pre-wrap",
              "wordWrap": "break-word",
            }
          }
          suppressContentEditableWarning={true}
        >
          <div
            data-contents="true"
          >
            <h1
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h1-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h1-0-0"
              >
                <span
                  data-offset-key="h1-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header one
                  </span>
                </span>
              </div>
            </h1>
            <h2
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h2-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h2-0-0"
              >
                <span
                  data-offset-key="h2-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header two
                  </span>
                </span>
              </div>
            </h2>
            <h3
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h3-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h3-0-0"
              >
                <span
                  data-offset-key="h3-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header three
                  </span>
                </span>
              </div>
            </h3>
            <h4
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h4-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h4-0-0"
              >
                <span
                  data-offset-key="h4-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header four
                  </span>
                </span>
              </div>
            </h4>
            <h5
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h5-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h5-0-0"
              >
                <span
                  data-offset-key="h5-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header five
                  </span>
                </span>
              </div>
            </h5>
            <h6
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="h6-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="h6-0-0"
              >
                <span
                  data-offset-key="h6-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    Header six
                  </span>
                </span>
              </div>
            </h6>
            <div
              className="RichText-yekvnw-0 hIhKZq"
              data-block={true}
              data-editor="text"
              data-offset-key="unstyled-0-0"
            >
              <div
                className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                data-offset-key="unstyled-0-0"
              >
                <span
                  data-offset-key="unstyled-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    This block is draft.js content.
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content Page 1`] = `null`;

exports[`Storyshots Content Table 1`] = `
<div
  className="Item-sc-10s0ojn-0 Table__Container-u530n6-0 lNMTM"
  id="table"
  type="table"
>
  <table
    className="Table__StyledTable-u530n6-1 FuEmH"
    scale={1}
  >
    <thead>
      <tr>
        <th
          className="TableCell-oc851c-0 lnUsfb"
        >
          first column
        </th>
        <th
          className="TableCell-oc851c-0 lnUsfb"
        >
          second column
        </th>
        <th
          className="TableCell-oc851c-0 lnUsfb"
        >
          third column
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 1, column 1
        </td>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 1, column 2
        </td>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 1, column 3
        </td>
      </tr>
      <tr>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 2, column 1
        </td>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 2, column 2
        </td>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 2, column 3
        </td>
      </tr>
      <tr>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 3, column 1
        </td>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 3, column 2
        </td>
        <td
          className="TableCell-oc851c-0 lnUsfb"
        >
          row 3, column 3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Content Text 1`] = `
<div
  className="Item-sc-10s0ojn-0 Xwmnj RichText-yekvnw-0 hIhKZq DraftEditor/root DraftEditor/alignLeft RichText-yekvnw-0 hIhKZq DraftEditor/root DraftEditor/alignLeft"
  id="text"
  type="draft"
>
  <div
    className="DraftEditor-root"
  >
    <div
      className="DraftEditor-editorContainer"
    >
      <div
        aria-activedescendant={null}
        aria-autocomplete={null}
        aria-controls={null}
        aria-describedby="placeholder-text"
        aria-expanded={null}
        aria-owns={null}
        className="public-DraftEditor-content"
        contentEditable={false}
        onBeforeInput={[Function]}
        onBlur={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCopy={[Function]}
        onCut={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseUp={[Function]}
        onPaste={[Function]}
        onSelect={[Function]}
        role={null}
        spellCheck={false}
        style={
          Object {
            "WebkitUserSelect": "text",
            "outline": "none",
            "userSelect": "text",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
        suppressContentEditableWarning={true}
      >
        <div
          data-contents="true"
        >
          <h1
            className="RichText-yekvnw-0 hIhKZq"
            data-block={true}
            data-editor="text"
            data-offset-key="h1-0-0"
          >
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="h1-0-0"
            >
              <span
                data-offset-key="h1-0-0"
                style={Object {}}
              >
                <span
                  data-text="true"
                >
                  Header one
                </span>
              </span>
            </div>
          </h1>
          <h2
            className="RichText-yekvnw-0 hIhKZq"
            data-block={true}
            data-editor="text"
            data-offset-key="h2-0-0"
          >
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="h2-0-0"
            >
              <span
                data-offset-key="h2-0-0"
                style={Object {}}
              >
                <span
                  data-text="true"
                >
                  Header two
                </span>
              </span>
            </div>
          </h2>
          <h3
            className="RichText-yekvnw-0 hIhKZq"
            data-block={true}
            data-editor="text"
            data-offset-key="h3-0-0"
          >
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="h3-0-0"
            >
              <span
                data-offset-key="h3-0-0"
                style={Object {}}
              >
                <span
                  data-text="true"
                >
                  Header three
                </span>
              </span>
            </div>
          </h3>
          <h4
            className="RichText-yekvnw-0 hIhKZq"
            data-block={true}
            data-editor="text"
            data-offset-key="h4-0-0"
          >
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="h4-0-0"
            >
              <span
                data-offset-key="h4-0-0"
                style={Object {}}
              >
                <span
                  data-text="true"
                >
                  Header four
                </span>
              </span>
            </div>
          </h4>
          <h5
            className="RichText-yekvnw-0 hIhKZq"
            data-block={true}
            data-editor="text"
            data-offset-key="h5-0-0"
          >
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="h5-0-0"
            >
              <span
                data-offset-key="h5-0-0"
                style={Object {}}
              >
                <span
                  data-text="true"
                >
                  Header five
                </span>
              </span>
            </div>
          </h5>
          <h6
            className="RichText-yekvnw-0 hIhKZq"
            data-block={true}
            data-editor="text"
            data-offset-key="h6-0-0"
          >
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="h6-0-0"
            >
              <span
                data-offset-key="h6-0-0"
                style={Object {}}
              >
                <span
                  data-text="true"
                >
                  Header six
                </span>
              </span>
            </div>
          </h6>
          <div
            className="RichText-yekvnw-0 hIhKZq"
            data-block={true}
            data-editor="text"
            data-offset-key="unstyled-0-0"
          >
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="unstyled-0-0"
            >
              <span
                data-offset-key="unstyled-0-0"
                style={Object {}}
              >
                <span
                  data-text="true"
                >
                  This block is draft.js content.
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
